# snake_game

./: CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
snake-game-cpp/: CHANGELOG.md
snake-game-cpp/src/: Buttons.h  StartScreen.cpp
snake-game-py/: pyproject.toml
snake-game-py/snake_game/: Player.py  __main__.py
snake-game-py/tests/: test_snake_game.py
src/: Buttons.cpp  StartScreen.h  main.cpp  temp.cpp
